--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".FSLGreetings"
+            android:exported="false" />
+        <activity
+            android:name=".Information2Activity"
+            android:exported="false" />
+        <activity
             android:name=".MiniGames.GameActivity"
             android:exported="false">
             <meta-data
@@ -46,6 +52,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
